about page complite

--- a/about.html
+++ b/about.html
@@ -181,54 +181,85 @@
 				<div class="demo">
 					<div class="row">
 						<div class="col-3">
-							<div class="bg-img">
-									<img src="assets/img/team1.jpg" alt="Photo-gaper 1">
-									<div class="hidden-icon text-light">
-										<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
-										<i class="fa-solid fa-image fa-2x m-3"></i>
-										<i class="fa-solid fa-file fa-2x m-3"></i>
+							<div class="card card-bg">
+								<div class="card-header">
+									<div class="img-bg">
+										<img src="./assets/img/team1.jpg" alt="Perfume 1">
+										<div class="hidden-icon text-light">
+											<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+											<i class="fa-solid fa-image fa-2x m-3"></i>
+											<i class="fa-solid fa-file fa-2x m-3"></i>
+										</div>
 									</div>
 								</div>
-							<h4 class="m-4 text-center">Daniel Roberto</h4>
-							<h6 class="ms-4">Subtitle goes here</h6>
-						</div>
-						<div class="col-3">
-							<div class="bg-img">
-								<img src="assets/img/team2.jpg" alt="Photo-gaper 3">
-								<div class="hidden-icon text-light">
-									<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
-									<i class="fa-solid fa-image fa-2x m-3"></i>
-									<i class="fa-solid fa-file fa-2x m-3"></i>
+								<div class="card-body">
+									<h4 class="m-4 text-center">Daniel Roberto</h4>
+								</div>
+								<div class="card-footer">
+									<h6 class="ms-4">Subtitle goes here</h6>
 								</div>
 							</div>
-							<h4 class="m-4 text-center">Richard Elison</h4>
-							<h6 class="ms-4">Subtitle goes here</h6>
 						</div>
 						<div class="col-3">
-							<div class="bg-img">
-								<img src="assets/img/team3.jpg" alt="Photo-gaper 3">
-								<div class="hidden-icon text-light">
-									<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
-									<i class="fa-solid fa-image fa-2x m-3"></i>
-									<i class="fa-solid fa-file fa-2x m-3"></i>
+							<div class="card card-bg">
+								<div class="card-header">
+									<div class="img-bg">
+										<img src="./assets/img/team2.jpg" alt="Perfume 1">
+										<div class="hidden-icon text-light">
+											<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+											<i class="fa-solid fa-image fa-2x m-3"></i>
+											<i class="fa-solid fa-file fa-2x m-3"></i>
+										</div>
+									</div>
+								</div>
+								<div class="card-body">
+									<h4 class="m-4 text-center">Daniel Roberto</h4>
+								</div>
+								<div class="card-footer">
+									<h6 class="ms-4">Subtitle goes here</h6>
 								</div>
 							</div>
-							<h4 class="m-4 text-center">Elizabeth</h4>
-							<h6 class="ms-4">Subtitle goes here</h6>
 						</div>
 						<div class="col-3">
-							<div class="bg-img">
-								<img src="assets/img/team4.jpg" alt="Photo-gaper 4">
-								<div class="hidden-icon text-light">
-									<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
-									<i class="fa-solid fa-image fa-2x m-3"></i>
-									<i class="fa-solid fa-file fa-2x m-3"></i>
+							<div class="card card-bg">
+								<div class="card-header">
+									<div class="img-bg">
+										<img src="./assets/img/team3.jpg" alt="Perfume 1">
+										<div class="hidden-icon text-light">
+											<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+											<i class="fa-solid fa-image fa-2x m-3"></i>
+											<i class="fa-solid fa-file fa-2x m-3"></i>
+										</div>
+									</div>
+								</div>
+								<div class="card-body">
+									<h4 class="m-4 text-center">Daniel Roberto</h4>
+								</div>
+								<div class="card-footer">
+									<h6 class="ms-4">Subtitle goes here</h6>
 								</div>
 							</div>
-							<h4 class="m-4 text-center">Robert Branson</h4>
-							<h6 class="ms-4">Subtitle goes here</h6>
 						</div>
-	
+						<div class="col-3">
+							<div class="card card-bg">
+								<div class="card-header">
+									<div class="img-bg">
+										<img src="./assets/img/team4.jpg" alt="Perfume 1">
+										<div class="hidden-icon text-light">
+											<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+											<i class="fa-solid fa-image fa-2x m-3"></i>
+											<i class="fa-solid fa-file fa-2x m-3"></i>
+										</div>
+									</div>
+								</div>
+								<div class="card-body">
+									<h4 class="m-4 text-center">Daniel Roberto</h4>
+								</div>
+								<div class="card-footer">
+									<h6 class="ms-4">Subtitle goes here</h6>
+								</div>
+							</div>
+						</div>
 				</div>
 				</div>
 			</div>
