all style done but not responsive style aviable

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!--!_---------------{  Create  Date : 01/11/2024  }---------------_-->
     <!--!_---------------{  Last Update  : 06/11/2024  }---------------_-->
         <title> 
-			Photo-Genic
+			Photo-Genic _Contact us
 		</title>
     <!--_---------------{  Added Favicon   }---------------_-->
 		<link rel="icon" href="./assets/img/logo.png" type="image/x-icon">
