--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <!--!_---------------{  Create  Date : 01/11/2024  }---------------_-->
     <!--!_---------------{  Last Update  : 06/11/2024  }---------------_-->
         <title> 
-			Photo-Genic
+			Photo-Genic _Gallery
 		</title>
     <!--_---------------{  Added Favicon   }---------------_-->
 		<link rel="icon" href="./assets/img/logo.png" type="image/x-icon">
@@ -315,10 +315,10 @@
 					</div>
 			</div>
 			<!--_---------------{  Enroll section  }---------------_-->
-			<div class="container my-5">
+			<div class="container mb-5">
 				<h2 class="text-center pt-5">have you ready to click your beatifull <br> Photography?</h2>
-				<p class="pera pb-5" id="p-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet sit eligendi maxime corrupti, voluptate voluptatem placeat mollitia maiores. <br>  Dolor fugit dolore maiores veritatis est cupiditate?</p>
-				<div class="btn-group" id="btn-group">
+				<p class="pera pb-4" id="p-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet sit eligendi maxime corrupti, voluptate voluptatem placeat mollitia maiores. <br>  Dolor fugit dolore maiores veritatis est cupiditate?</p>
+				<div class="btn-group mb-5" id="btn-group">
 					<a href="" class="btn btn-outline-danger mx-2">Buy Now ...</a>
 					<a href="" class="btn btn-outline-danger">Get Started</a>
 				</div>
