--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <!--!_---------------{  Create  Date : 01/11/2024  }---------------_-->
     <!--!_---------------{  Last Update  : 06/11/2024  }---------------_-->
         <title> 
-			Photo-Genic
+			Photo-Genic  _About us
 		</title>
     <!--_---------------{  Added Favicon   }---------------_-->
 		<link rel="icon" href="./assets/img/logo.png" type="image/x-icon">
@@ -69,26 +69,26 @@
 		</header>
         <!--//---------------{  Header section  }---------------//-->
         <!--todo---------------{  Start Banner section  }---------------_-->
-            <main class="about-banner">
-				<div class="img-div">
-					<img src="./assets/img/about-b.jpg" alt="About banner">
-				</div>
-			<!--_---------------{  breadcrumb section  }---------------_-->
+        <main class="about-banner">
+			<div class="img-div">
+				<img src="./assets/img/about-b.jpg" alt="About banner">
+			</div>
+		<!--_---------------{  breadcrumb section  }---------------_-->
 			<div class="heading-div">
-					<h2>About Us</h2>
-					<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-						<ol class="breadcrumb">
-						  <li class="breadcrumb-item"><a href="index.html" class="text-light">Home</a></li>
-						  <li class="breadcrumb-item active" aria-current="page" class="text-white">About</li>
-						</ol>
-					  </nav>
-				</div>
-			</main>
+				<h2>About Us</h2>
+				<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+					<ol class="breadcrumb">
+					  <li class="breadcrumb-item"><a href="index.html" class="text-light">Home</a></li>
+					  <li class="breadcrumb-item active" aria-current="page" class="text-white">About</li>
+					</ol>
+				  </nav>
+			</div>
+		</main>
         <!--//---------------{  Banner section  }---------------//-->
         <!--todo---------------{  Start Extra content  }---------------_-->
-            <section>
-			<!--_---------------{  article section  }---------------_-->
-				<div class="container my-5 pt-5">
+        <section>
+		<!--_---------------{  article section  }---------------_-->
+			<div class="container my-5 pt-5">
 					<div class="row">
 						<div class="col-6">
 							<h2 class="fw-bolder pt-2 pb-4 ml-3">Amazing Photo Gallery</h2>
@@ -102,24 +102,50 @@
 							<img src="assets/img/about.jpg" class="img-fluid" alt="About Img">
 						</div>
 					</div>
-				</div>	
-			<!--_---------------{  best photography section  }---------------_-->
-				<div class="container mb-5">
+			</div>	
+		<!--_---------------{  best photography section  }---------------_-->
+			<div class="container mb-5">
 					<div class="row">
 						<div class="col-6">
 							<img src="./assets/img/service1.jpg" width="100%" alt="best photography">
 						</div>
 						<div class="col-6">
 							<div class="ms-3">
-								<h2>A high quality and best photography</h2>
-								<br><br><br>
-								<h3> !--{add progress bar }-- </h3>
+							  <h2>A high quality and best photography</h2>
+								<div class="container pt-5">
+									<div class="progress-group">
+										<div class="progress-items pb-4">
+											<h5 class="progress-label">Photography</h5>
+											<div class="progress">
+												<div class="progress-bar" id="progress-bar-1" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">25%</div>
+											</div>
+										</div>
+										<div class="progress-items pb-4">
+											<h5 class="progress-label">Creativity</h5>
+											<div class="progress">
+												<div class="progress-bar" id="progress-bar-2" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">25%</div>
+											</div>
+										</div>
+										<div class="progress-items pb-4">
+											<h5 class="progress-label">Retouching</h5>
+											<div class="progress">
+												<div class="progress-bar" id="progress-bar-3" role="progressbar" style="width:60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">25%</div>
+											</div>
+										</div>
+										<div class="progress-items pb-4">
+											<h5 class="progress-label">New Stills</h5>
+											<div class="progress">
+												<div class="progress-bar" id="progress-bar-4" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">25%</div>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			<!--_---------------{  details section  }---------------_-->
-				<!-- <div class="container my-4">
+			</div>
+		<!--_---------------{  details section  }---------------_-->
+			<!-- <div class="container my-4">
 					<div class="row">
 						<div class="col-4">
 							<i class="fa-solid fa-video fa-3x text-danger ms-3"></i>
@@ -143,137 +169,164 @@
 						</div>
 					</div>
 				</div> -->
-			<!--_---------------{  A photo gaper section  }---------------_-->
+		<!--_---------------{  A photo gaper section  }---------------_-->
 			<div class="bg-gaper pt-2">
-				<div class="container mt-5 mb-3">
-					<div class="row">
-						<div class="col-1">
-							<i class="fa-solid fa-image py-5 fa-5x text-danger my-3"></i>
-							<i class="fa-solid fa-photo-film py-5 fa-5x text-danger my-4"></i>
-							<i class="fa-solid fa-video py-5 fa-5x text-danger my-3"></i>
-						</div>
-						<div class="col-5" id="text-gaper">
-							<div class="py-5 mx-4 mt-3">
-								<h3>A high quality photography</h3>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, enim? ipsum dolor sit amet, consectetur adipisicing elit. Debitis consequatur fugit similique.</p>	
+					<div class="container mt-5 mb-3">
+						<div class="row">
+							<div class="col-1">
+								<i class="fa-solid fa-image py-5 fa-5x text-danger my-3"></i>
+								<i class="fa-solid fa-photo-film py-5 fa-5x text-danger my-4"></i>
+								<i class="fa-solid fa-video py-5 fa-5x text-danger my-3"></i>
 							</div>
-							<div class="py-4 mx-4 mb-4">
-								<h3>A high quality photography</h3>
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, aperiam. ipsum dolor sit amet, consectetur adipisicing elit. Debitis consequatur fugit similique.</p>	
+							<div class="col-5" id="text-gaper">
+								<div class="py-5 mx-4 mt-3">
+									<h3>A high quality photography</h3>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, enim? ipsum dolor sit amet, consectetur adipisicing elit. Debitis consequatur fugit similique.</p>	
+								</div>
+								<div class="py-4 mx-4 mb-4">
+									<h3>A high quality photography</h3>
+									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, aperiam. ipsum dolor sit amet, consectetur adipisicing elit. Debitis consequatur fugit similique.</p>	
+								</div>
+								<div class="py-5 mx-4 mt-3">
+									<h3>A high quality photography</h3>
+									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, dicta! ipsum dolor sit amet, consectetur adipisicing elit. Debitis consequatur fugit similique.</p>	
+								</div>
 							</div>
-							<div class="py-5 mx-4 mt-3">
-								<h3>A high quality photography</h3>
-								<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, dicta! ipsum dolor sit amet, consectetur adipisicing elit. Debitis consequatur fugit similique.</p>	
-							</div>
-						</div>
-						<div class="col-6">
-							<div class="mt-5">
-								<img src="assets/img/about2.jpg" alt="Photo gaper">
+							<div class="col-6">
+								<div class="mt-5">
+									<img src="assets/img/about2.jpg" alt="Photo gaper">
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 			</div>
-			<!--_---------------{  Photo-gaper section  }---------------_-->
+		<!--_---------------{  Photo-gaper section  }---------------_-->
 			<div class="container mb-5 mt-3">
-				<h2 class="text-center fw-bolder pt-5 pb-4">Amazing Photographers</h2>
-				<p class="pera pb-4">Nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat <br> sunt in culpa qui official.</p>
-				<div class="demo">
-					<div class="row">
-						<div class="col-3">
-							<div class="card card-bg">
-								<div class="card-header">
-									<div class="img-bg">
-										<img src="./assets/img/team1.jpg" alt="Perfume 1">
-										<div class="hidden-icon text-light">
-											<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
-											<i class="fa-solid fa-image fa-2x m-3"></i>
-											<i class="fa-solid fa-file fa-2x m-3"></i>
+					<h2 class="text-center fw-bolder pt-5 pb-4">Amazing Photographers</h2>
+					<p class="pera pb-4">Nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat <br> sunt in culpa qui official.</p>
+					<div class="demo">
+						<div class="row">
+							<div class="col-3">
+								<div class="card card-bg">
+									<div class="card-header">
+										<div class="img-bg">
+											<img src="./assets/img/team1.jpg" alt="Perfume 1">
+											<div class="hidden-icon text-light">
+												<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+												<i class="fa-solid fa-image fa-2x m-3"></i>
+												<i class="fa-solid fa-file fa-2x m-3"></i>
+											</div>
 										</div>
 									</div>
-								</div>
-								<div class="card-body">
-									<h4 class="m-4 text-center">Daniel Roberto</h4>
-								</div>
-								<div class="card-footer">
-									<h6 class="ms-4">Subtitle goes here</h6>
-								</div>
-							</div>
-						</div>
-						<div class="col-3">
-							<div class="card card-bg">
-								<div class="card-header">
-									<div class="img-bg">
-										<img src="./assets/img/team2.jpg" alt="Perfume 1">
-										<div class="hidden-icon text-light">
-											<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
-											<i class="fa-solid fa-image fa-2x m-3"></i>
-											<i class="fa-solid fa-file fa-2x m-3"></i>
-										</div>
+									<div class="card-body">
+										<h4 class="m-4 text-center">Daniel Roberto</h4>
+									</div>
+									<div class="card-footer">
+										<h6 class="ms-4">Subtitle goes here</h6>
 									</div>
 								</div>
-								<div class="card-body">
-									<h4 class="m-4 text-center">Daniel Roberto</h4>
-								</div>
-								<div class="card-footer">
-									<h6 class="ms-4">Subtitle goes here</h6>
-								</div>
 							</div>
-						</div>
-						<div class="col-3">
-							<div class="card card-bg">
-								<div class="card-header">
-									<div class="img-bg">
-										<img src="./assets/img/team3.jpg" alt="Perfume 1">
-										<div class="hidden-icon text-light">
-											<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
-											<i class="fa-solid fa-image fa-2x m-3"></i>
-											<i class="fa-solid fa-file fa-2x m-3"></i>
+							<div class="col-3">
+								<div class="card card-bg">
+									<div class="card-header">
+										<div class="img-bg">
+											<img src="./assets/img/team2.jpg" alt="Perfume 1">
+											<div class="hidden-icon text-light">
+												<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+												<i class="fa-solid fa-image fa-2x m-3"></i>
+												<i class="fa-solid fa-file fa-2x m-3"></i>
+											</div>
 										</div>
 									</div>
-								</div>
-								<div class="card-body">
-									<h4 class="m-4 text-center">Daniel Roberto</h4>
-								</div>
-								<div class="card-footer">
-									<h6 class="ms-4">Subtitle goes here</h6>
-								</div>
-							</div>
-						</div>
-						<div class="col-3">
-							<div class="card card-bg">
-								<div class="card-header">
-									<div class="img-bg">
-										<img src="./assets/img/team4.jpg" alt="Perfume 1">
-										<div class="hidden-icon text-light">
-											<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
-											<i class="fa-solid fa-image fa-2x m-3"></i>
-											<i class="fa-solid fa-file fa-2x m-3"></i>
-										</div>
+									<div class="card-body">
+										<h4 class="m-4 text-center">Daniel Roberto</h4>
+									</div>
+									<div class="card-footer">
+										<h6 class="ms-4">Subtitle goes here</h6>
 									</div>
 								</div>
-								<div class="card-body">
-									<h4 class="m-4 text-center">Daniel Roberto</h4>
-								</div>
-								<div class="card-footer">
-									<h6 class="ms-4">Subtitle goes here</h6>
+							</div>
+							<div class="col-3">
+								<div class="card card-bg">
+									<div class="card-header">
+										<div class="img-bg">
+											<img src="./assets/img/team3.jpg" alt="Perfume 1">
+											<div class="hidden-icon text-light">
+												<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+												<i class="fa-solid fa-image fa-2x m-3"></i>
+												<i class="fa-solid fa-file fa-2x m-3"></i>
+											</div>
+										</div>
+									</div>
+									<div class="card-body">
+										<h4 class="m-4 text-center">Daniel Roberto</h4>
+									</div>
+									<div class="card-footer">
+										<h6 class="ms-4">Subtitle goes here</h6>
+									</div>
 								</div>
 							</div>
-						</div>
-				</div>
-				</div>
+							<div class="col-3">
+								<div class="card card-bg">
+									<div class="card-header">
+										<div class="img-bg">
+											<img src="./assets/img/team4.jpg" alt="Perfume 1">
+											<div class="hidden-icon text-light">
+												<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+												<i class="fa-solid fa-image fa-2x m-3"></i>
+												<i class="fa-solid fa-file fa-2x m-3"></i>
+											</div>
+										</div>
+									</div>
+									<div class="card-body">
+										<h4 class="m-4 text-center">Daniel Roberto</h4>
+									</div>
+									<div class="card-footer">
+										<h6 class="ms-4">Subtitle goes here</h6>
+									</div>
+								</div>
+							</div>
+					</div>
+					</div>
 			</div>
 		</section>
         <!--//---------------{  Extra content  }---------------//-->
+        <!--todo---------------{  Start Aside section  }---------------_-->
+		<aside>
+			<div class="aside-items">
+				<div class="container">
+					<h6 class="pera-2">Brilliant Photography</h6>
+					<h1>Built For Creatives To <br> Showcase Their Portfolio <br> Beautiful !!</h1>
+					<a href="" class="btn btn-outline-light">Learn More</a>
+				</div>
+			</div>
+		</aside>
+        <!--//---------------{  Start Aside section  }---------------_-->
         <!--todo---------------{  Start Article section  }---------------_-->
 		<article>
+			<!-- feedback's section  -->
 			<div class="container">
 				<h2 class="text-center fw-bolder pt-5 pb-3">Testimonials</h2>
 				<p class="pera text-muted" id="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quae dolor veritatis dicta. <br> Illum vitae fuga magnam nobis quia nesciunt.</p>
-				<div class="container">
-
+				<div class="feedback-items py-5">
+					<div class="main-item text-center">
+						<img src="./assets/img/testi4.jpg" alt="member 4" class="rounded-circle mb-5 mt-4" id="member-1">
+						<h4 class="pera mb-4">Theo Hall</h4>
+						<h6 class="pera text-muted">Subtitle goes here</h6>
+						<p class="feedback-sub-heading pt-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, repudiandae quidem? Impedit veniam obcaecati, aperiam ex ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+						<img src="./assets/img/quote.png" alt="quote" class="mt-3">
+					</div>
+					<div class="feedback-extra-img">
+						<img src="./assets/img/testi1.jpg" alt="member 2" class="rounded-circle b-color" id="member-2">
+						<img src="./assets/img/testi2.jpg" alt="member 3" class="rounded-circle b-color" id="member-3">
+						<img src="./assets/img/testi3.jpg" alt="member 4" class="rounded-circle b-color" id="member-4">
+						<img src="./assets/img/testi5.jpg" alt="member 5" class="rounded-circle b-color" id="member-5">
+						<img src="./assets/img/testi6.jpg" alt="member 6" class="rounded-circle b-color" id="member-6">
+						<img src="./assets/img/testi7.jpg" alt="member 7" class="rounded-circle b-color" id="member-7">
+					</div>
 				</div>
 			 </div>
+			<!--// feedback's section  -->
 		</article>
 		<!--//---------------{  Article section  }---------------//-->
         <!--todo---------------{  Start Footer section  }---------------_-->
