--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				 <div class="container mb-4">
 					<h2 class="text-center fw-bolder pt-5 pb-5">Frequently Asked Questions</h2>
 					<div class="row">
-						<div class="col-6">
+						<div class="col-6 py-4">
 							<div class="accordion accordion-flush" id="accordionFlushExample">
 								<div class="accordion-item">
 								  <h2 class="accordion-header" id="flush-headingOne">
@@ -232,6 +232,34 @@
 							  </div>
 						</div>
 						<div class="col-6">
+							<div class="container">
+								<div class="progress-group">
+									<div class="progress-items pb-4">
+										<h5 class="progress-label">Photography</h5>
+										<div class="progress">
+											<div class="progress-bar" id="progress-bar-1" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">25%</div>
+										</div>
+									</div>
+									<div class="progress-items pb-4">
+										<h5 class="progress-label">Creativity</h5>
+										<div class="progress">
+											<div class="progress-bar" id="progress-bar-2" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">25%</div>
+										</div>
+									</div>
+									<div class="progress-items pb-4">
+										<h5 class="progress-label">Retouching</h5>
+										<div class="progress">
+											<div class="progress-bar" id="progress-bar-3" role="progressbar" style="width:60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">25%</div>
+										</div>
+									</div>
+									<div class="progress-items pb-4">
+										<h5 class="progress-label">New Stills</h5>
+										<div class="progress">
+											<div class="progress-bar" id="progress-bar-4" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">25%</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				 </div>
@@ -241,8 +269,22 @@
 				 <div class="container">
 					<h2 class="text-center fw-bolder pt-5 pb-3">Testimonials</h2>
 					<p class="pera text-muted" id="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quae dolor veritatis dicta. <br> Illum vitae fuga magnam nobis quia nesciunt.</p>
-					<div class="container">
-						
+					<div class="feedback-items py-5">
+						<div class="main-item text-center">
+							<img src="./assets/img/testi4.jpg" alt="member 4" class="rounded-circle mb-5 mt-4" id="member-1">
+							<h4 class="pera mb-4">Theo Hall</h4>
+							<h6 class="pera text-muted">Subtitle goes here</h6>
+							<p class="feedback-sub-heading pt-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, repudiandae quidem? Impedit veniam obcaecati, aperiam ex ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+							<img src="./assets/img/quote.png" alt="quote" class="mt-3">
+						</div>
+						<div class="feedback-extra-img">
+							<img src="./assets/img/testi1.jpg" alt="member 2" class="rounded-circle b-color" id="member-2">
+							<img src="./assets/img/testi2.jpg" alt="member 3" class="rounded-circle b-color" id="member-3">
+							<img src="./assets/img/testi3.jpg" alt="member 4" class="rounded-circle b-color" id="member-4">
+							<img src="./assets/img/testi5.jpg" alt="member 5" class="rounded-circle b-color" id="member-5">
+							<img src="./assets/img/testi6.jpg" alt="member 6" class="rounded-circle b-color" id="member-6">
+							<img src="./assets/img/testi7.jpg" alt="member 7" class="rounded-circle b-color" id="member-7">
+						</div>
 					</div>
 				 </div>
 				<!--// feedback's section  -->
@@ -265,9 +307,8 @@
 								</div>
 								<div class="card-body">
 									<div class="card-title">
-
+										<h5 class="pera-2">Customer 1</h5>
 									</div>
-									<h5 class="pera-2">Customer 1</h5>
 									<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ex recusandae, distinctio fuga itaque eligendi sunt mollitia quia.</p>
 								</div>
 								<div class="card-footer">
